5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1674_1105.log
== TEST (2019-04-25 11:28:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Casa: ")
print("Entrada: ", a)
x = "Casa: "
if (a!= lobo and a!= leao and a!= veado and a!= dragao and a!= rosa and a!= sol and a!= lula and a!= esfolado and a!= turta)
	print("Brasao invalido")
elif(a== lobo):
	print(x,"Stark")
elif(a== leoa):
	print(x,"Lannister")
elif(a== veado):
	print(x,"Baratheon")
elif(a== dragao):
	print(x,"Targaryen")
elif(a== rosa):
	print(x,"Tyrell")
elif(a== sol):
	print(x,"Martell")
elif(a==lula):
	print(x, "Greyjoy")
elif(a== esfolado):
	print(x,"Bolton")
elif(a==turta):
	print(x,"Tully")
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 7
    if (a!= lobo and a!= leao and a!= veado and a!= dragao and a!= rosa and a!= sol and a!= lula and a!= esfolado and a!= turta)
                                                                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Casa: ")
print("Entrada: ", a)
x = "Casa: "
if (a!= lobo and a!= leao and a!= veado and a!= dragao and a!= rosa and a!= sol and a!= lula and a!= esfolado and a!= turta)
	print("Brasao invalido")
elif(a== lobo):
	print(x,"Stark")
elif(a== leoa):
	print(x,"Lannister")
elif(a== veado):
	print(x,"Baratheon")
elif(a== dragao):
	print(x,"Targaryen")
elif(a== rosa):
	print(x,"Tyrell")
elif(a== sol):
	print(x,"Martell")
elif(a==lula):
	print(x, "Greyjoy")
elif(a== esfolado):
	print(x,"Bolton")
elif(a==turta):
	print(x,"Tully")
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 7
    if (a!= lobo and a!= leao and a!= veado and a!= dragao and a!= rosa and a!= sol and a!= lula and a!= esfolado and a!= turta)
                                                                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Casa: ")
print("Entrada: ", a)
x = "Casa: "
if (a!= "lula" and a!= "leao" and a!="veado" and a!="dragao" and a!="rosa" and a!="sol" and a!="lula" and a!="esfolado" and a!="turta"):
	print("Brasao invalido")
elif(a== lobo):
	print(x,"Stark")
elif(a== leoa):
	print(x,"Lannister")
elif(a== veado):
	print(x,"Baratheon")
elif(a== dragao):
	print(x,"Targaryen")
elif(a== rosa):
	print(x,"Tyrell")
elif(a== sol):
	print(x,"Martell")
elif(a==lula):
	print(x, "Greyjoy")
elif(a== esfolado):
	print(x,"Bolton")
elif(a==turta):
	print(x,"Tully")
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif(a== lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:36:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Casa: ")
print("Entrada: ", a)
x = "Casa: "
if (a!= "lobo" and a!="leao" and a!="veado" and a!="dragao" and a!="rosa" and a!="sol" and a!="lula" and a!="esfolado" and a!="turta"):
	print("Brasao invalido")
elif(a=="lobo"):
	print(x,"Stark")
elif(a=="leao"):
	print(x,"Lannister")
elif(a=="veado"):
	print(x,"Baratheon")
elif(a=="dragao"):
	print(x,"Targaryen")
elif(a== "rosa"):
	print(x,"Tyrell")
elif(a=="sol"):
	print(x,"Martell")
elif(a=="lula"):
	print(x, "Greyjoy")
elif(a=="esfolado":
	print(x,"Bolton")
elif(a=="turta"):
	print(x,"Tully")
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 23
    elif(a=="esfolado":
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:36:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Casa: ")
print("Entrada: ", a)
x = "Casa: "
if (a!= "lobo" and a!="leao" and a!="veado" and a!="dragao" and a!="rosa" and a!="sol" and a!="lula" and a!="esfolado" and a!="turta"):
	print("Brasao invalido")
elif(a=="lobo"):
	print(x,"Stark")
elif(a=="leao"):
	print(x,"Lannister")
elif(a=="veado"):
	print(x,"Baratheon")
elif(a=="dragao"):
	print(x,"Targaryen")
elif(a== "rosa"):
	print(x,"Tyrell")
elif(a=="sol"):
	print(x,"Martell")
elif(a=="lula"):
	print(x, "Greyjoy")
elif(a=="esfolado"):
	print(x,"Bolton")
elif(a=="turta"):
	print(x,"Tully")
	
	
	
	
	
	
-- OUTPUT:
Entrada:  lula
Casa:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:37:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("Casa: ")
print("Entrada: ", a)
x = "Casa: "
if (a!= "lobo" and a!="leao" and a!="veado" and a!="dragao" and a!="rosa" and a!="sol" and a!="lula" and a!="esfolado" and a!="turta"):
	print("Brasao invalido")
elif(a=="lobo"):
	print(x,"Stark")
elif(a=="leao"):
	print(x,"Lannister")
elif(a=="veado"):
	print(x,"Baratheon")
elif(a=="dragao"):
	print(x,"Targaryen")
elif(a== "rosa"):
	print(x,"Tyrell")
elif(a=="sol"):
	print(x,"Martell")
elif(a=="lula"):
	print(x, "Greyjoy")
elif(a=="esfolado"):
	print(x,"Bolton")
elif(a=="turta"):
	print(x,"Tully")
	
	
	
	
	
	
-- EXECUTION TIME:
0.195627
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
